# eval

./: .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  evaluator.py  example_client.py  judge.py  pyproject.toml  requirements.txt  scorers.py  server.py  setup.py  storage.py  test_evaluator.py  test_fix.py  verification_script.py
src/: __init__.py
src/eval/: __init__.py  cli.py  context.py  stores.py  types.py  utils.py
src/eval/config/: __init__.py  settings.py
src/eval/scorers/: judge.py  prompts.py
src/eval/server/: __init__.py  app.py  handlers.py  session.py  tools.py
src/eval/tasks/: eval.py
src/eval_framework/: __init__.py  cli.py
src/eval_framework/config/: settings.py
src/eval_framework/core/: __init__.py  evaluator.py  judge.py  scorers.py
src/eval_framework/models/: __init__.py  evaluation.py
src/eval_framework/server/: __init__.py  app.py  handlers.py  session.py  tools.py
src/eval_framework/utils/: __init__.py  change_tracker.py  context.py  helpers.py  storage.py
tests/: __init__.py  test_context.py  test_evaluator.py
